@@ -411,15 +411,15 @@ case 'edit':
 		echo "</td></tr>\n";
 	}
 	echo "</table>";
-	if ($level0type=="SOUR" || $level0type=="REPO" || $level0type=="OBJE" ) {
+	if ($level0type=="SOUR" || $level0type=="REPO" || $level0type=="OBJE") {
 		if ($level1type!="NOTE") print_add_layer("NOTE");
 	} else {
 		if ($level1type!="SEX") {
-			if ($level1type!="ASSO" && $level1type!="REPO") print_add_layer("ASSO");
-			if ($level1type!="SOUR" && $level1type!="REPO") print_add_layer("SOUR");
+			if ($level1type!="ASSO" && $level1type!="REPO" && $level1type!="NOTE") print_add_layer("ASSO");
+			if ($level1type!="SOUR" && $level1type!="REPO" && $level1type!="NOTE") print_add_layer("SOUR");
 			if ($level1type!="NOTE") print_add_layer("NOTE");
 			// Shared Note addition ------------
-			if ($level1type!="SHARED_NOTE") print_add_layer("SHARED_NOTE");
+			if ($level1type!="SHARED_NOTE" && $level1type!="NOTE") print_add_layer("SHARED_NOTE");
 			if ($level1type!="OBJE" && $level1type!="REPO" && $level1type!="NOTE" && $MULTI_MEDIA) print_add_layer("OBJE");
 			//-- RESN missing in new structure, RESN can be added to all level 1 tags
 			if (!in_array("RESN", $tags)) print_add_layer("RESN");
@@ -457,16 +457,16 @@ case 'add':
 	}
 	echo "</table>";
 
-	if ($level0type=="SOUR" || $level0type=="REPO") {
+	if ($level0type=="SOUR" || $level0type=="REPO" ) {
 		if ($fact!="NOTE") print_add_layer("NOTE");
 	} else {
-		if ($fact!="OBJE") {
-			if ($fact!="ASSO" && $fact!="SOUR" && $fact!="REPO") print_add_layer("ASSO");
-			if ($fact!="SOUR" && $fact!="REPO") print_add_layer("SOUR");
-			if ($fact!="NOTE") print_add_layer("NOTE");
+		if ($fact!="OBJE" ) {
+			if ($fact!="ASSO" && $fact!="SOUR" && $fact!="REPO" && $fact!="SHARED_NOTE") print_add_layer("ASSO");
+			if ($fact!="SOUR" && $fact!="REPO" && $fact!="SHARED_NOTE") print_add_layer("SOUR");
+			if ($fact!="NOTE" && $fact!="SHARED_NOTE") print_add_layer("NOTE");
 			// Shared Note addition ------------
 			if ($fact!="SHARED_NOTE" && $fact!="NOTE") print_add_layer("SHARED_NOTE");
-			if ($fact!="REPO") print_add_layer("OBJE");
+			if ($fact!="REPO" && $fact!="SHARED_NOTE") print_add_layer("OBJE");
 		}
 	}
 	//-- RESN missing in new structure, RESN can be added to all level 1 tags
